Added toFixed in addRow method

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                             <td colspan="3">
                                 Receipe total :
                             </td>
-                            <td id="total-receipe" class="total-receipe">
+                            <td id="receipe-total" class="total-receipe">
                                 0€
                             </td>
                         </tr>
