--- a/index.html
+++ b/index.html
@@ -193,7 +193,28 @@
                 </li>
             </ul>
         </footer>
-    </div> 
+    </div>
+    <!-- Modal box -->
+    <div class="outer-modal hidden">
+        <div class="inner-modal">
+            <div class="content">
+                <p>
+                    Would you like to save the receipe:<br>
+                    <strong></strong>
+                </p>
+            </div>
+
+            <div class="footer">
+                <button type="button" class="btn btn-danger">
+                    Non
+                </button>
+                <button type="button" class="btn btn-primary">
+                    Oui
+                </button>
+            </div>
+        </div>
+    </div>
+    <!-- End of modal box -->
 </body>
 
 </html>
