Added modal and table management
Add receipe title obfuscation

Persists receipes in localStorage

Update receipe-results table after dialog closed

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         </footer>
     </div>
     <!-- Modal box -->
-    <div class="outer-modal hidden">
+    <div class="outer-modal">
         <div class="inner-modal">
             <div class="content">
                 <p>
